[gd_scene load_steps=7 format=3 uid="uid://bhuops78anvk6"]

[ext_resource type="Script" path="res://Script/Dungeon2.gd" id="1_qr3rn"]
[ext_resource type="TileSet" uid="uid://bourpaof5g2kp" path="res://Scene/TileMap1.tres" id="2_38t1t"]
[ext_resource type="PackedScene" uid="uid://c6cfmhsxbk5r3" path="res://Entity/Slime.tscn" id="3_6bxng"]
[ext_resource type="PackedScene" uid="uid://c8pnqpx6je86j" path="res://Entity/Player.tscn" id="5_r05gc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ccy6x"]
size = Vector2(66, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_juk5a"]
size = Vector2(20, 31.5)

[node name="Dungeon2" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_qr3rn")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = ExtResource("2_38t1t")
format = 2
layer_0/name = "Ground"
layer_0/navigation_enabled = false
layer_0/tile_data = PackedInt32Array(0, 458755, 0, 65536, 65539, 1, 131072, 65539, 2, 1, 524291, 0, 65537, 196611, 2, 131073, 65539, 1, 2, 458755, 0, 65538, 131075, 1, 131074, 131075, 1, 3, 196611, 2, 65539, 65539, 1, 131075, 196611, 2, 4, 131075, 2, 65540, 131075, 1, 131076, 131075, 2, 5, 524291, 0, 65541, 196611, 1, 131077, 458755, 2, 6, 458755, 0, 65542, 131075, 1, 131078, 524291, 2, 7, 196611, 2, 65543, 196611, 1, 131079, 589827, 2, 8, 131075, 2, 65544, 131075, 1, 131080, 458755, 2, 9, 196611, 2, 65545, 131075, 1, 131081, 524291, 2, 10, 458755, 0, 65546, 196611, 1, 131082, 589827, 2, 11, 524291, 0, 65547, 196611, 1, 131083, 589827, 2, 12, 458755, 0, 65548, 262147, 1, 131084, 393219, 2, 13, 524291, 0, 65549, 196611, 1, 131085, 131075, 1, 14, 458755, 0, 65550, 131075, 1, 131086, 262147, 1, 15, 524291, 0, 65551, 131075, 1, 131087, 196611, 2, 196620, 393219, 0, 262156, 393219, 1, 327692, 393219, 2, 196621, 458755, 0, 262157, 458755, 1, 327693, 458755, 2, 196622, 262147, 2, 262158, 262147, 2, 327694, 196611, 2, 196623, 131075, 2, 262159, 131075, 2, 327695, 131075, 1, 196616, 393219, 0, 262152, 393219, 1, 327688, 393219, 2, 196617, 458755, 0, 262153, 458755, 1, 327689, 458755, 2, 196618, 524291, 0, 262154, 524291, 1, 327690, 524291, 2, 196619, 589827, 0, 262155, 589827, 1, 327691, 589827, 2, 196608, 65539, 1, 262144, 458755, 0, 327680, 458755, 1, 196609, 65539, 2, 262145, 65539, 2, 327681, 65539, 2, 196610, 131075, 2, 262146, 262147, 2, 327682, 262147, 2, 196611, 131075, 3, 262147, 131075, 2, 327683, 589827, 2, 196612, 196611, 3, 262148, 131075, 2, 327684, 393219, 2, 196613, 458755, 0, 262149, 65539, 2, 327685, 65539, 2, 196614, 524291, 0, 262150, 524291, 1, 327686, 524291, 2, 196615, 589827, 0, 262151, 589827, 1, 327687, 589827, 2, 393216, 65539, 2, 458752, 65539, 1, 524288, 65539, 2, 393217, 65539, 2, 458753, 65539, 3, 524289, 393219, 2, 393218, 262147, 2, 458754, 262147, 3, 524290, 458755, 2, 393219, 589827, 0, 458755, 196611, 3, 524291, 393219, 2, 393220, 393219, 0, 458756, 196611, 3, 524292, 458755, 2, 393221, 65539, 2, 458757, 65539, 3, 524293, 131075, 2, 393222, 524291, 0, 458758, 196611, 3, 524294, 196611, 2, 393223, 589827, 0, 458759, 196611, 3, 524295, 262147, 2, 393224, 393219, 0, 458760, 196611, 3, 524296, 196611, 2, 393225, 458755, 0, 458761, 131075, 2, 524297, 65539, 2, 393226, 524291, 0, 458762, 196611, 2, 524298, 262147, 2, 393227, 589827, 0, 458763, 196611, 3, 524299, 196611, 2, 393228, 393219, 0, 458764, 196611, 3, 524300, 131075, 2, 393229, 458755, 0, 458765, 196611, 3, 524301, 458755, 0, 393230, 196611, 2, 458766, 196611, 3, 524302, 524291, 0, 393231, 196611, 2, 458767, 196611, 3, 524303, 589827, 0, 16, 458755, 0, 65552, 196611, 1, 131088, 196611, 2, 17, 196611, 1, 65553, 65539, 1, 131089, 65539, 2, 18, 524291, 2, 65554, 262147, 1, 131090, 131075, 2, 19, 589827, 2, 65555, 262147, 1, 131091, 196611, 1, 196624, 131075, 2, 262160, 196611, 2, 327696, 196611, 1, 196625, 65539, 2, 262161, 65539, 2, 327697, 196611, 2, 196626, 262147, 2, 262162, 262147, 2, 327698, 262147, 2, 196627, 262147, 3, 262163, 262147, 3, 327699, 262147, 2, 393232, 196611, 2, 458768, 196611, 3, 524304, 393219, 1, 393233, 196611, 2, 458769, 196611, 3, 524305, 458755, 1, 393234, 262147, 2, 458770, 262147, 3, 524306, 524291, 1, 393235, 262147, 3, 458771, 262147, 2, 524307, 262147, 3, 589833, 65539, 2, 589834, 262147, 2)
layer_1/name = "Walls"
layer_1/y_sort_enabled = true
layer_1/tile_data = PackedInt32Array(0, 524291, 7, 1, 524291, 7, 2, 3, 0, 3, 196611, 0, 4, 262147, 0, 5, 65539, 0, 6, 131075, 0, 7, 65539, 0, 8, 65539, 0, 11, 262147, 0, 12, 65539, 0, 13, 327683, 1, 14, 524291, 7, 15, 524291, 7, 16, 3, 0, 17, 196611, 0, 18, 262147, 0, 19, 327683, 0, 65555, 131075, 5, 196627, 262147, 5, 262163, 327683, 2, 327699, 327683, 3, 393235, 327683, 1, 458771, 327683, 2, 524307, 327683, 4, 524303, 131075, 4, 524304, 196611, 4, 524305, 262147, 4, 524306, 262147, 4, 524302, 65539, 4, 524299, 262147, 5, 524300, 196611, 4, 524301, 262147, 4, 524295, 131075, 4, 524296, 327683, 5, 524294, 65539, 4, 524290, 131075, 4, 524291, 327683, 4, 524292, 3, 4, 524293, 262147, 4, 524289, 65539, 4, 524288, 3, 4, 327680, 3, 3, 393216, 3, 2, 458752, 3, 3, 196608, 3, 3, 262144, 3, 2, 65536, 3, 0, 131072, 3, 2, 589824, 524291, 7, 589825, 524291, 7, 589826, 524291, 7, 589827, 524291, 7, 589828, 524291, 7, 589829, 524291, 7, 589830, 524291, 7, 589831, 524291, 7, 589832, 3, 2, 589836, 524291, 7, 589837, 524291, 7, 589838, 524291, 7, 589839, 524291, 7, 589840, 524291, 7, 589841, 524291, 7, 589842, 524291, 7, 589843, 524291, 7, 589835, 327683, 3, 9, 196611, 0, 10, 262147, 0, 458755, 327683, 3, 393219, 327683, 1, 327683, 327683, 2, 262147, 262147, 5, 262148, 327683, 5, 327684, 3, 2, 393220, 3, 2, 458756, 3, 3, 65551, 327683, 2, 131087, 327683, 3, 65552, 3, 1, 131088, 3, 2, 196624, 3, 3, 196623, 327683, 1, 262159, 65539, 0, 262160, 196611, 0, 65538, 262147, 0, 65537, 262147, 0, 65549, 196611, 0, 65550, 196611, 0)
layer_2/name = "YSort"
layer_2/y_sort_enabled = true
layer_2/tile_data = PackedInt32Array(65537, 3, 9, 3, 3, 9, 12, 3, 9, 65550, 3, 9, 17, 3, 9, 262160, 3, 9)

[node name="Player" parent="." instance=ExtResource("5_r05gc")]
position = Vector2(323, 304)

[node name="TextureRect" parent="Player/CanvasLayer" index="0"]
offset_left = 7457.0
offset_top = 4201.5
offset_right = 7537.0
offset_bottom = 4222.5

[node name="Slime" parent="." node_paths=PackedStringArray("marker") instance=ExtResource("3_6bxng")]
position = Vector2(574, 236)
marker = NodePath("../Slime2EndPoint")

[node name="Slime2" parent="." node_paths=PackedStringArray("marker") instance=ExtResource("3_6bxng")]
position = Vector2(189, 90)
marker = NodePath("../Slime1EndPoint")

[node name="Dungeon1_Transfer" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="Dungeon1_Transfer"]
position = Vector2(318, 334)
shape = SubResource("RectangleShape2D_ccy6x")

[node name="Dungeon3_Transfer" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="Dungeon3_Transfer"]
position = Vector2(654, 82.75)
shape = SubResource("RectangleShape2D_juk5a")

[node name="ReferenceRect" type="ReferenceRect" parent="."]
offset_left = 179.0
offset_top = 93.0
offset_right = 467.0
offset_bottom = 254.0

[node name="Slime1EndPoint" type="Marker2D" parent="."]
position = Vector2(420, 97)

[node name="Slime2EndPoint" type="Marker2D" parent="."]
position = Vector2(590, 87)

[connection signal="body_entered" from="Dungeon1_Transfer" to="." method="_on_dungeon_1_transfer_body_entered"]
[connection signal="body_exited" from="Dungeon1_Transfer" to="." method="_on_dungeon_1_transfer_body_exited"]
[connection signal="body_entered" from="Dungeon3_Transfer" to="." method="_on_dungeon_3_transfer_body_entered"]
[connection signal="body_exited" from="Dungeon3_Transfer" to="." method="_on_dungeon_3_transfer_body_exited"]

[editable path="Player"]
